--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue Template</title>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <!-- Make sure Tailwind CSS is linked -->
   </head>
   <body>
     <div id="app"></div>
